--- a/Android/Ryan/app/src/main/res/layout/activity_hongyang.xml
+++ b/Android/Ryan/app/src/main/res/layout/activity_hongyang.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,13 +11,70 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ryan.wangbw.widget.hongyangcustomview.HongyangActivity">
 
-    <com.ryan.wangbw.widget.hongyangcustomview.CustomTitleView android:layout_width="wrap_content"
+    <!--<com.ryan.wangbw.widget.hongyangcustomview.CustomTitleView android:layout_width="wrap_content"
                                                                android:layout_height="wrap_content"
                                                                app:titleText2="3712"
                                                                app:titleTextColor2="#ff0000"
                                                                app:titleTextSize2="40sp"
                                                                android:padding="10dp"
                                                                android:layout_centerInParent="true"
+        />-->
+
+    <!--<com.ryan.wangbw.widget.hongyangcustomview.CustomImageView android:layout_width="wrap_content"
+                                                               android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+                                                               android:padding="10dp"
+                                                               app:image="@mipmap/ic_launcher"
+                                                               app:imageScaleType="center"
+                                                               app:titleText2="hello android !"
+                                                               app:titleTextColor2="#ff0000"
+                                                               app:titleTextSize2="30sp"
         />
 
-</RelativeLayout>
+    <com.ryan.wangbw.widget.hongyangcustomview.CustomImageView android:layout_width="wrap_content"
+                                                               android:layout_height="wrap_content"
+                                                               android:layout_margin="10dp"
+                                                               android:padding="10dp"
+                                                               app:image="@mipmap/ic_launcher"
+                                                               app:imageScaleType="center"
+                                                               app:titleText2="helloworldwelcome"
+                                                               app:titleTextColor2="#00ff00"
+                                                               app:titleTextSize2="20sp"
+        />
+    <com.ryan.wangbw.widget.hongyangcustomview.CustomImageView android:layout_width="wrap_content"
+                                                               android:layout_height="wrap_content"
+                                                               android:layout_margin="10dp"
+                                                               android:padding="10dp"
+                                                               app:image="@drawable/msg_gift"
+                                                               app:imageScaleType="center"
+                                                               app:titleText2="礼物"
+                                                               app:titleTextColor2="#ff0000"
+                                                               app:titleTextSize2="12sp"
+        />-->
+    <!--<com.ryan.wangbw.widget.hongyangcustomview.CustomProgressBar android:layout_width="120dp"
+                                                                 android:layout_height="120dp"
+                                                                 android:layout_marginTop="20dp"
+                                                                 app:circleWidth="15dp"
+                                                                 app:firstColor="#D4F668"
+                                                                 app:secondColor="#2F9DD2"
+                                                                 app:speed="20"
+        />-->
+    <!--<com.ryan.wangbw.widget.hongyangcustomview.CustomProgressBar android:layout_width="wrap_content"
+                                                                 android:layout_height="wrap_content"
+                                                                 app:circleWidth="24dp"
+                                                                 android:layout_marginBottom="40dp"
+                                                                 app:firstColor="#16A3FA"
+                                                                 app:secondColor="#D20F02"
+                                                                 app:speed="10" />-->
+    <com.ryan.wangbw.widget.hongyangcustomview.CustomVolumControlBar android:layout_width="200dp"
+                                                                     android:layout_height="200dp"
+        app:bg="@drawable/msg_gift"
+                                                                     app:circleWidth="12dp"
+                                                                     app:dotCount="20"
+                                                                     app:firstColor="#252420"
+                                                                     app:secondColor="#fdfdfd"
+                                                                     app:splitSize="25"
+
+        />
+
+</LinearLayout>
